@@ -30,9 +30,10 @@
  * @modules java.instrument
  *          jdk.jartool/sun.tools.jar
  * @requires vm.jvmti
- * @compile --enable-preview -source ${jdk.version} RedefineSealedClass.java
- * @run main/othervm --enable-preview RedefineSealedClass buildagent
- * @run main/othervm/timeout=6000 --enable-preview RedefineSealedClass runtest
+ * @requires vm.flagless
+ * @compile RedefineSealedClass.java
+ * @run driver RedefineSealedClass buildagent
+ * @run driver/timeout=6000 RedefineSealedClass runtest
  */
 
 import java.io.FileNotFoundException;
@@ -103,11 +104,11 @@ public class RedefineSealedClass {
         }
         if (argv.length == 1 && argv[0].equals("runtest")) {
             String[] javaArgs1 = { "-XX:MetaspaceSize=12m", "-XX:MaxMetaspaceSize=12m",
-                                   "-javaagent:redefineagent.jar", "--enable-preview",
-                                   "RedefineSealedClass"};
+                                   "-javaagent:redefineagent.jar", "RedefineSealedClass"};
             ProcessBuilder pb = ProcessTools.createJavaProcessBuilder(javaArgs1);
             OutputAnalyzer output = new OutputAnalyzer(pb.start());
             output.shouldNotContain("processing of -javaagent failed");
+            output.shouldHaveExitValue(0);
         }
     }
 }
